--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,13 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
 
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
 
     tools:context=".MainActivity">
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        app:title="방명록 쓰기"
+        app:titleTextColor="#ffffff"
+        />
 
 
     <!--이름-->
@@ -24,6 +33,7 @@
             />
 
         <EditText
+            android:id="@+id/edtName"
             android:layout_width="780px"
             android:layout_height="match_parent"
             android:hint="이름을 입력해 주세요."
@@ -47,6 +57,7 @@
             />
 
         <EditText
+            android:id="@+id/edtPassword"
             android:layout_width="780px"
             android:layout_height="match_parent"
             android:hint="패스워드를 입력해 주세요."
@@ -62,6 +73,7 @@
         >
 
         <EditText
+            android:id="@+id/edtContent"
             android:layout_width="match_parent"
             android:layout_height="350px"
             android:inputType="text"
@@ -71,14 +83,20 @@
 
     <!--버튼-->
     <LinearLayout
+        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         >
 
         <Button
+            android:id="@+id/btnWrite"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:padding="30px"
             android:text="저장"
+            android:textSize="50px"
+            android:layout_marginLeft="10px"
+            android:layout_marginRight="10px"
             />
 
     </LinearLayout>
